export const snapshot = {};

snapshot[`Auto-tests for test 1`] = `
{
  data: {
    test: {
      a: 2,
    },
  },
}
`;

snapshot[`Auto-tests for test 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "test",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "out type",
          fields: [
            {
              name: "a",
            },
          ],
          inputFields: null,
          name: "out",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for basic 1`] = `
{
  data: {
    get_context: {
      username: null,
    },
  },
}
`;

snapshot[`Auto-tests for basic 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "get_context",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_4 type",
          fields: [
            {
              name: "username",
            },
          ],
          inputFields: null,
          name: "object_4",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for jwt 1`] = `
{
  data: {
    get_context: {
      your_own_content: null,
    },
  },
}
`;

snapshot[`Auto-tests for jwt 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "get_context",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_4 type",
          fields: [
            {
              name: "your_own_content",
            },
          ],
          inputFields: null,
          name: "object_4",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for oauth2 1`] = `
{
  data: {
    get_context: {
      exp: null,
    },
  },
}
`;

snapshot[`Auto-tests for oauth2 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "get_context",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_4 type",
          fields: [
            {
              name: "exp",
            },
          ],
          inputFields: null,
          name: "object_4",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for database 1`] = `
{
  data: {
    create_message: {
      id: 1,
    },
  },
}
`;

snapshot[`Auto-tests for database 2`] = `
{
  data: {
    list_messages: [
      {
        body: "This is a message",
        id: 1,
      },
    ],
  },
}
`;

snapshot[`Auto-tests for database 3`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "boolean type",
          fields: null,
          inputFields: null,
          name: "Boolean",
        },
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "_Float type",
          fields: [
            {
              name: "float",
            },
          ],
          inputFields: null,
          name: "_Float",
        },
        {
          description: "_Boolean type",
          fields: [
            {
              name: "boolean",
            },
          ],
          inputFields: null,
          name: "_Boolean",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "list_messages",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "messageManyOutput type",
          fields: [
            {
              name: "body",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageManyOutput",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "create_message",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "messageCreateOutput type",
          fields: [
            {
              name: "body",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageCreateOutput",
        },
        {
          description: "messageManyWhere input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "body",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "messageManyWhereInp",
        },
        {
          description: "either type
not_object_37, either_36",
          fields: null,
          inputFields: null,
          name: "either_38In",
        },
        {
          description: "not_object_37 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_37Inp",
        },
        {
          description: "either type
equals_object_23, in_object_24, notIn_object_25, startsWith_object_27, endsWith_object_29, contains_object_31, gt_object_32, lt_object_33, gte_object_34, lte_object_35, integer_2",
          fields: null,
          inputFields: null,
          name: "either_36In",
        },
        {
          description: "equals_object_23 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "equals_object_23Inp",
        },
        {
          description: "union type
base_any_type_union_20, array_21",
          fields: null,
          inputFields: null,
          name: "union_22In",
        },
        {
          description: "union type
integer_16, float_17, boolean_18, string_19",
          fields: null,
          inputFields: null,
          name: "base_any_type_union_20In",
        },
        {
          description: "in_object_24 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "in_object_24Inp",
        },
        {
          description: "notIn_object_25 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "notIn_object_25Inp",
        },
        {
          description: "startsWith_object_27 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
          ],
          name: "startsWith_object_27Inp",
        },
        {
          description: "endsWith_object_29 input type",
          fields: null,
          inputFields: [
            {
              name: "endsWith",
            },
          ],
          name: "endsWith_object_29Inp",
        },
        {
          description: "contains_object_31 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
          ],
          name: "contains_object_31Inp",
        },
        {
          description: "gt_object_32 input type",
          fields: null,
          inputFields: [
            {
              name: "gt",
            },
          ],
          name: "gt_object_32Inp",
        },
        {
          description: "lt_object_33 input type",
          fields: null,
          inputFields: [
            {
              name: "lt",
            },
          ],
          name: "lt_object_33Inp",
        },
        {
          description: "gte_object_34 input type",
          fields: null,
          inputFields: [
            {
              name: "gte",
            },
          ],
          name: "gte_object_34Inp",
        },
        {
          description: "lte_object_35 input type",
          fields: null,
          inputFields: [
            {
              name: "lte",
            },
          ],
          name: "lte_object_35Inp",
        },
        {
          description: "either type
not_object_41, either_40",
          fields: null,
          inputFields: null,
          name: "either_42In",
        },
        {
          description: "not_object_41 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_41Inp",
        },
        {
          description: "either type
equals_object_23, in_object_24, notIn_object_25, startsWith_object_27, endsWith_object_29, contains_object_31, gt_object_32, lt_object_33, gte_object_34, lte_object_35, string_3",
          fields: null,
          inputFields: null,
          name: "either_40In",
        },
        {
          description: "either type
not_object_45, either_44",
          fields: null,
          inputFields: null,
          name: "either_46In",
        },
        {
          description: "not_object_45 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_45Inp",
        },
        {
          description: "either type
equals_object_23, in_object_24, notIn_object_25, startsWith_object_27, endsWith_object_29, contains_object_31, gt_object_32, lt_object_33, gte_object_34, lte_object_35, string_4",
          fields: null,
          inputFields: null,
          name: "either_44In",
        },
        {
          description: "inner_where_node_object_54 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "body",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "inner_where_node_object_54Inp",
        },
        {
          description: "object_60 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "body",
            },
          ],
          name: "object_60Inp",
        },
        {
          description: "messageCreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "body",
            },
          ],
          name: "messageCreateInputInp",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for graphql 1`] = `
{
  data: {
    users: {
      data: [
        {
          id: "1",
          name: "Leanne Graham",
        },
        {
          id: "2",
          name: "Ervin Howell",
        },
        {
          id: "3",
          name: "Clementine Bauch",
        },
        {
          id: "4",
          name: "Patricia Lebsack",
        },
        {
          id: "5",
          name: "Chelsey Dietrich",
        },
        {
          id: "6",
          name: "Mrs. Dennis Schulist",
        },
        {
          id: "7",
          name: "Kurtis Weissnat",
        },
        {
          id: "8",
          name: "Nicholas Runolfsdottir V",
        },
        {
          id: "9",
          name: "Glenna Reichert",
        },
        {
          id: "10",
          name: "Clementina DuBuque",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for graphql 2`] = `
{
  data: {
    create_message: {
      id: 1,
    },
  },
}
`;

snapshot[`Auto-tests for graphql 3`] = `
{
  data: {
    messages: [
      {
        title: "Hey",
        user: {
          name: "Leanne Graham",
        },
      },
    ],
  },
}
`;

snapshot[`Auto-tests for graphql 4`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "boolean type",
          fields: null,
          inputFields: null,
          name: "Boolean",
        },
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "_Float type",
          fields: [
            {
              name: "float",
            },
          ],
          inputFields: null,
          name: "_Float",
        },
        {
          description: "_Boolean type",
          fields: [
            {
              name: "boolean",
            },
          ],
          inputFields: null,
          name: "_Boolean",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "users",
            },
            {
              name: "messages",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "messageManyOutput type",
          fields: [
            {
              name: "user",
            },
            {
              name: "user_id",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageManyOutput",
        },
        {
          description: "object_4 type",
          fields: [
            {
              name: "name",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "object_4",
        },
        {
          description: "object_82 type",
          fields: [
            {
              name: "data",
            },
          ],
          inputFields: null,
          name: "object_82",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "create_message",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "messageCreateOutput type",
          fields: [
            {
              name: "user",
            },
            {
              name: "user_id",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageCreateOutput",
        },
        {
          description: "messageManyWhere input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "messageManyWhereInp",
        },
        {
          description: "either type
not_object_44, either_43",
          fields: null,
          inputFields: null,
          name: "either_45In",
        },
        {
          description: "not_object_44 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_44Inp",
        },
        {
          description: "either type
equals_object_30, in_object_31, notIn_object_32, startsWith_object_34, endsWith_object_36, contains_object_38, gt_object_39, lt_object_40, gte_object_41, lte_object_42, integer_5",
          fields: null,
          inputFields: null,
          name: "either_43In",
        },
        {
          description: "equals_object_30 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "equals_object_30Inp",
        },
        {
          description: "union type
base_any_type_union_27, array_28",
          fields: null,
          inputFields: null,
          name: "union_29In",
        },
        {
          description: "union type
integer_23, float_24, boolean_25, string_26",
          fields: null,
          inputFields: null,
          name: "base_any_type_union_27In",
        },
        {
          description: "in_object_31 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "in_object_31Inp",
        },
        {
          description: "notIn_object_32 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "notIn_object_32Inp",
        },
        {
          description: "startsWith_object_34 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
          ],
          name: "startsWith_object_34Inp",
        },
        {
          description: "endsWith_object_36 input type",
          fields: null,
          inputFields: [
            {
              name: "endsWith",
            },
          ],
          name: "endsWith_object_36Inp",
        },
        {
          description: "contains_object_38 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
          ],
          name: "contains_object_38Inp",
        },
        {
          description: "gt_object_39 input type",
          fields: null,
          inputFields: [
            {
              name: "gt",
            },
          ],
          name: "gt_object_39Inp",
        },
        {
          description: "lt_object_40 input type",
          fields: null,
          inputFields: [
            {
              name: "lt",
            },
          ],
          name: "lt_object_40Inp",
        },
        {
          description: "gte_object_41 input type",
          fields: null,
          inputFields: [
            {
              name: "gte",
            },
          ],
          name: "gte_object_41Inp",
        },
        {
          description: "lte_object_42 input type",
          fields: null,
          inputFields: [
            {
              name: "lte",
            },
          ],
          name: "lte_object_42Inp",
        },
        {
          description: "either type
not_object_48, either_47",
          fields: null,
          inputFields: null,
          name: "either_49In",
        },
        {
          description: "not_object_48 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_48Inp",
        },
        {
          description: "either type
equals_object_30, in_object_31, notIn_object_32, startsWith_object_34, endsWith_object_36, contains_object_38, gt_object_39, lt_object_40, gte_object_41, lte_object_42, string_6",
          fields: null,
          inputFields: null,
          name: "either_47In",
        },
        {
          description: "either type
not_object_52, either_51",
          fields: null,
          inputFields: null,
          name: "either_53In",
        },
        {
          description: "not_object_52 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_52Inp",
        },
        {
          description: "either type
equals_object_30, in_object_31, notIn_object_32, startsWith_object_34, endsWith_object_36, contains_object_38, gt_object_39, lt_object_40, gte_object_41, lte_object_42, uid",
          fields: null,
          inputFields: null,
          name: "either_51In",
        },
        {
          description: "inner_where_node_object_61 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "inner_where_node_object_61Inp",
        },
        {
          description: "object_67 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "user",
            },
          ],
          name: "object_67Inp",
        },
        {
          description: "messageCreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
          ],
          name: "messageCreateInputInp",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for authentication 1`] = `
{
  data: {
    get_context: {
      username: null,
    },
  },
}
`;

snapshot[`Auto-tests for authentication 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "get_context",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_4 type",
          fields: [
            {
              name: "username",
            },
          ],
          inputFields: null,
          name: "object_4",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for cors 1`] = `
{
  data: {
    catch_me_if_you_can: "R0!S@O!FUVCGw",
  },
}
`;

snapshot[`Auto-tests for cors 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "catch_me_if_you_can",
            },
          ],
          inputFields: null,
          name: "Query",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for rate 1`] = `
{
  data: {
    lightweight_call: "R0!S@O!FUVCGw",
  },
}
`;

snapshot[`Auto-tests for rate 2`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "rate-limited",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for rate 3`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "rate-limited",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for rate 4`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "rate-limited",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for rate 5`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "by_result_count",
            },
            {
              name: "heavy_call",
            },
            {
              name: "medium_call",
            },
            {
              name: "lightweight_call",
            },
          ],
          inputFields: null,
          name: "Query",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for fcm 1`] = `
{
  data: {
    send_notification: {
      error: {
        code: 401,
        message: "Request had invalid authentication credentials. Expected OAuth 2 access token, login cookie or other valid authentication credential. See https://developers.google.com/identity/sign-in/web/devconsole-project.",
      },
    },
  },
}
`;

snapshot[`Auto-tests for fcm 2`] = `
{
  data: {
    user: {
      id: "1",
      name: "Leanne Graham",
    },
  },
}
`;

snapshot[`Auto-tests for fcm 3`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "boolean type",
          fields: null,
          inputFields: null,
          name: "Boolean",
        },
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "_Float type",
          fields: [
            {
              name: "float",
            },
          ],
          inputFields: null,
          name: "_Float",
        },
        {
          description: "_Boolean type",
          fields: [
            {
              name: "boolean",
            },
          ],
          inputFields: null,
          name: "_Boolean",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "user",
            },
            {
              name: "users",
            },
            {
              name: "list_messages",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "messageManyOutput type",
          fields: [
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageManyOutput",
        },
        {
          description: "object_404 type",
          fields: [
            {
              name: "data",
            },
          ],
          inputFields: null,
          name: "object_404",
        },
        {
          description: "user type",
          fields: [
            {
              name: "name",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "user",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "send_notification",
            },
            {
              name: "create_message",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "messageCreateOutput type",
          fields: [
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageCreateOutput",
        },
        {
          description: "_googleapi_17_MessageOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "webpush",
            },
            {
              name: "apns",
            },
            {
              name: "topic",
            },
            {
              name: "android",
            },
            {
              name: "notification",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "condition",
            },
            {
              name: "name",
            },
            {
              name: "token",
            },
          ],
          inputFields: null,
          name: "_googleapi_17_MessageOut",
        },
        {
          description: "object_228 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_228",
        },
        {
          description: "_googleapi_3_FcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_3_FcmOptionsOut",
        },
        {
          description: "_googleapi_1_ErrorResponse type",
          fields: [
            {
              name: "status",
            },
            {
              name: "message",
            },
            {
              name: "code",
            },
          ],
          inputFields: null,
          name: "_googleapi_1_ErrorResponse",
        },
        {
          description: "_googleapi_13_NotificationOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "body",
            },
            {
              name: "image",
            },
            {
              name: "title",
            },
          ],
          inputFields: null,
          name: "_googleapi_13_NotificationOut",
        },
        {
          description: "_googleapi_9_AndroidConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "directBootOk",
            },
            {
              name: "notification",
            },
            {
              name: "ttl",
            },
            {
              name: "priority",
            },
            {
              name: "restrictedPackageName",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "collapseKey",
            },
          ],
          inputFields: null,
          name: "_googleapi_9_AndroidConfigOut",
        },
        {
          description: "_googleapi_11_AndroidFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_11_AndroidFcmOptionsOut",
        },
        {
          description: "object_52 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_52",
        },
        {
          description: "_googleapi_15_AndroidNotificationOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "notificationCount",
            },
            {
              name: "clickAction",
            },
            {
              name: "vibrateTimings",
            },
            {
              name: "ticker",
            },
            {
              name: "bypassProxyNotification",
            },
            {
              name: "image",
            },
            {
              name: "defaultLightSettings",
            },
            {
              name: "lightSettings",
            },
            {
              name: "tag",
            },
            {
              name: "icon",
            },
            {
              name: "bodyLocKey",
            },
            {
              name: "channelId",
            },
            {
              name: "defaultVibrateTimings",
            },
            {
              name: "titleLocKey",
            },
            {
              name: "proxy",
            },
            {
              name: "bodyLocArgs",
            },
            {
              name: "sound",
            },
            {
              name: "visibility",
            },
            {
              name: "color",
            },
            {
              name: "sticky",
            },
            {
              name: "title",
            },
            {
              name: "notificationPriority",
            },
            {
              name: "body",
            },
            {
              name: "eventTime",
            },
            {
              name: "localOnly",
            },
            {
              name: "defaultSound",
            },
            {
              name: "titleLocArgs",
            },
          ],
          inputFields: null,
          name: "_googleapi_15_AndroidNotificationOut",
        },
        {
          description: "_googleapi_7_LightSettingsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "color",
            },
            {
              name: "lightOnDuration",
            },
            {
              name: "lightOffDuration",
            },
          ],
          inputFields: null,
          name: "_googleapi_7_LightSettingsOut",
        },
        {
          description: "_googleapi_23_ColorOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "red",
            },
            {
              name: "blue",
            },
            {
              name: "green",
            },
            {
              name: "alpha",
            },
          ],
          inputFields: null,
          name: "_googleapi_23_ColorOut",
        },
        {
          description: "_googleapi_25_ApnsConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "payload",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "headers",
            },
          ],
          inputFields: null,
          name: "_googleapi_25_ApnsConfigOut",
        },
        {
          description: "object_288 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_288",
        },
        {
          description: "_googleapi_21_ApnsFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "image",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_21_ApnsFcmOptionsOut",
        },
        {
          description: "object_293 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_293",
        },
        {
          description: "_googleapi_27_WebpushConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "notification",
            },
            {
              name: "headers",
            },
          ],
          inputFields: null,
          name: "_googleapi_27_WebpushConfigOut",
        },
        {
          description: "object_313 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_313",
        },
        {
          description: "object_317 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_317",
        },
        {
          description: "object_321 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_321",
        },
        {
          description: "_googleapi_5_WebpushFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "link",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_5_WebpushFcmOptionsOut",
        },
        {
          description: "messageManyWhere input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "messageManyWhereInp",
        },
        {
          description: "either type
not_object_370, either_369",
          fields: null,
          inputFields: null,
          name: "either_371In",
        },
        {
          description: "not_object_370 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_370Inp",
        },
        {
          description: "either type
equals_object_356, in_object_357, notIn_object_358, startsWith_object_360, endsWith_object_362, contains_object_364, gt_object_365, lt_object_366, gte_object_367, lte_object_368, integer_337",
          fields: null,
          inputFields: null,
          name: "either_369In",
        },
        {
          description: "equals_object_356 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "equals_object_356Inp",
        },
        {
          description: "union type
base_any_type_union_353, array_354",
          fields: null,
          inputFields: null,
          name: "union_355In",
        },
        {
          description: "union type
integer_349, float_350, boolean_351, string_352",
          fields: null,
          inputFields: null,
          name: "base_any_type_union_353In",
        },
        {
          description: "in_object_357 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "in_object_357Inp",
        },
        {
          description: "notIn_object_358 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "notIn_object_358Inp",
        },
        {
          description: "startsWith_object_360 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
          ],
          name: "startsWith_object_360Inp",
        },
        {
          description: "endsWith_object_362 input type",
          fields: null,
          inputFields: [
            {
              name: "endsWith",
            },
          ],
          name: "endsWith_object_362Inp",
        },
        {
          description: "contains_object_364 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
          ],
          name: "contains_object_364Inp",
        },
        {
          description: "gt_object_365 input type",
          fields: null,
          inputFields: [
            {
              name: "gt",
            },
          ],
          name: "gt_object_365Inp",
        },
        {
          description: "lt_object_366 input type",
          fields: null,
          inputFields: [
            {
              name: "lt",
            },
          ],
          name: "lt_object_366Inp",
        },
        {
          description: "gte_object_367 input type",
          fields: null,
          inputFields: [
            {
              name: "gte",
            },
          ],
          name: "gte_object_367Inp",
        },
        {
          description: "lte_object_368 input type",
          fields: null,
          inputFields: [
            {
              name: "lte",
            },
          ],
          name: "lte_object_368Inp",
        },
        {
          description: "either type
not_object_374, either_373",
          fields: null,
          inputFields: null,
          name: "either_375In",
        },
        {
          description: "not_object_374 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_374Inp",
        },
        {
          description: "either type
equals_object_356, in_object_357, notIn_object_358, startsWith_object_360, endsWith_object_362, contains_object_364, gt_object_365, lt_object_366, gte_object_367, lte_object_368, string_338",
          fields: null,
          inputFields: null,
          name: "either_373In",
        },
        {
          description: "inner_where_node_object_383 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "inner_where_node_object_383Inp",
        },
        {
          description: "object_389 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
          ],
          name: "object_389Inp",
        },
        {
          description: "messageCreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
          ],
          name: "messageCreateInputInp",
        },
        {
          description: "_googleapi_16_MessageIn input type",
          fields: null,
          inputFields: [
            {
              name: "token",
            },
            {
              name: "name",
            },
            {
              name: "condition",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "notification",
            },
            {
              name: "android",
            },
            {
              name: "topic",
            },
            {
              name: "apns",
            },
            {
              name: "webpush",
            },
          ],
          name: "_googleapi_16_MessageInInp",
        },
        {
          description: "object_210 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_210Inp",
        },
        {
          description: "_googleapi_2_FcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
          ],
          name: "_googleapi_2_FcmOptionsInInp",
        },
        {
          description: "_googleapi_12_NotificationIn input type",
          fields: null,
          inputFields: [
            {
              name: "title",
            },
            {
              name: "image",
            },
            {
              name: "body",
            },
          ],
          name: "_googleapi_12_NotificationInInp",
        },
        {
          description: "_googleapi_8_AndroidConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "collapseKey",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "restrictedPackageName",
            },
            {
              name: "priority",
            },
            {
              name: "ttl",
            },
            {
              name: "notification",
            },
            {
              name: "directBootOk",
            },
          ],
          name: "_googleapi_8_AndroidConfigInInp",
        },
        {
          description: "_googleapi_10_AndroidFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
          ],
          name: "_googleapi_10_AndroidFcmOptionsInInp",
        },
        {
          description: "object_35 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_35Inp",
        },
        {
          description: "_googleapi_14_AndroidNotificationIn input type",
          fields: null,
          inputFields: [
            {
              name: "titleLocArgs",
            },
            {
              name: "defaultSound",
            },
            {
              name: "localOnly",
            },
            {
              name: "eventTime",
            },
            {
              name: "body",
            },
            {
              name: "notificationPriority",
            },
            {
              name: "title",
            },
            {
              name: "sticky",
            },
            {
              name: "color",
            },
            {
              name: "visibility",
            },
            {
              name: "sound",
            },
            {
              name: "bodyLocArgs",
            },
            {
              name: "proxy",
            },
            {
              name: "titleLocKey",
            },
            {
              name: "defaultVibrateTimings",
            },
            {
              name: "channelId",
            },
            {
              name: "bodyLocKey",
            },
            {
              name: "icon",
            },
            {
              name: "tag",
            },
            {
              name: "lightSettings",
            },
            {
              name: "defaultLightSettings",
            },
            {
              name: "image",
            },
            {
              name: "bypassProxyNotification",
            },
            {
              name: "ticker",
            },
            {
              name: "vibrateTimings",
            },
            {
              name: "clickAction",
            },
            {
              name: "notificationCount",
            },
          ],
          name: "_googleapi_14_AndroidNotificationInInp",
        },
        {
          description: "_googleapi_6_LightSettingsIn input type",
          fields: null,
          inputFields: [
            {
              name: "lightOffDuration",
            },
            {
              name: "lightOnDuration",
            },
            {
              name: "color",
            },
          ],
          name: "_googleapi_6_LightSettingsInInp",
        },
        {
          description: "_googleapi_22_ColorIn input type",
          fields: null,
          inputFields: [
            {
              name: "alpha",
            },
            {
              name: "green",
            },
            {
              name: "blue",
            },
            {
              name: "red",
            },
          ],
          name: "_googleapi_22_ColorInInp",
        },
        {
          description: "_googleapi_24_ApnsConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "headers",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "payload",
            },
          ],
          name: "_googleapi_24_ApnsConfigInInp",
        },
        {
          description: "object_278 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_278Inp",
        },
        {
          description: "_googleapi_20_ApnsFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
            {
              name: "image",
            },
          ],
          name: "_googleapi_20_ApnsFcmOptionsInInp",
        },
        {
          description: "object_283 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_283Inp",
        },
        {
          description: "_googleapi_26_WebpushConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "headers",
            },
            {
              name: "notification",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
          ],
          name: "_googleapi_26_WebpushConfigInInp",
        },
        {
          description: "object_299 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_299Inp",
        },
        {
          description: "object_303 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_303Inp",
        },
        {
          description: "object_307 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_307Inp",
        },
        {
          description: "_googleapi_4_WebpushFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
            {
              name: "link",
            },
          ],
          name: "_googleapi_4_WebpushFcmOptionsInInp",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for deno 1`] = `
{
  data: {
    compute_fib: {
      ms: 0,
      res: 3,
    },
  },
}
`;

snapshot[`Auto-tests for deno 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "compute_fib",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_6 type",
          fields: [
            {
              name: "ms",
            },
            {
              name: "res",
            },
          ],
          inputFields: null,
          name: "object_6",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for policies 1`] = `
{
  data: {
    public: "R0!S@O!FUVCGw",
  },
}
`;

snapshot[`Auto-tests for policies 2`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "No policy took decision on type 'function_9' ('function') at '<root>.admin_only'",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for policies 3`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "No policy took decision on type 'function_12' ('function') at '<root>.user_only'",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for policies 4`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "No policy took decision on type 'function_15' ('function') at '<root>.both'",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for policies 5`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "both",
            },
            {
              name: "user_only",
            },
            {
              name: "admin_only",
            },
            {
              name: "public",
            },
          ],
          inputFields: null,
          name: "Query",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for business-logic 1`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "Authorization failed for policy '__ctx_user_type' with effect 'none' on type 'function_408' ('function') at '<root>.list_messages'",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for business-logic 2`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "boolean type",
          fields: null,
          inputFields: null,
          name: "Boolean",
        },
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "_Float type",
          fields: [
            {
              name: "float",
            },
          ],
          inputFields: null,
          name: "_Float",
        },
        {
          description: "_Boolean type",
          fields: [
            {
              name: "boolean",
            },
          ],
          inputFields: null,
          name: "_Boolean",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "list_users",
            },
            {
              name: "emit_new_message",
            },
            {
              name: "list_messages",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "messageManyOutput type",
          fields: [
            {
              name: "user",
            },
            {
              name: "user_id",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageManyOutput",
        },
        {
          description: "object_338 type",
          fields: [
            {
              name: "name",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "object_338",
        },
        {
          description: "object_420 type",
          fields: [
            {
              name: "data",
            },
          ],
          inputFields: null,
          name: "object_420",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "send_notification",
            },
            {
              name: "create_message",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "messageCreateOutput type",
          fields: [
            {
              name: "user",
            },
            {
              name: "user_id",
            },
            {
              name: "title",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "messageCreateOutput",
        },
        {
          description: "_googleapi_17_MessageOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "webpush",
            },
            {
              name: "apns",
            },
            {
              name: "topic",
            },
            {
              name: "android",
            },
            {
              name: "notification",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "condition",
            },
            {
              name: "name",
            },
            {
              name: "token",
            },
          ],
          inputFields: null,
          name: "_googleapi_17_MessageOut",
        },
        {
          description: "object_228 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_228",
        },
        {
          description: "_googleapi_3_FcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_3_FcmOptionsOut",
        },
        {
          description: "_googleapi_1_ErrorResponse type",
          fields: [
            {
              name: "status",
            },
            {
              name: "message",
            },
            {
              name: "code",
            },
          ],
          inputFields: null,
          name: "_googleapi_1_ErrorResponse",
        },
        {
          description: "_googleapi_13_NotificationOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "body",
            },
            {
              name: "image",
            },
            {
              name: "title",
            },
          ],
          inputFields: null,
          name: "_googleapi_13_NotificationOut",
        },
        {
          description: "_googleapi_9_AndroidConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "directBootOk",
            },
            {
              name: "notification",
            },
            {
              name: "ttl",
            },
            {
              name: "priority",
            },
            {
              name: "restrictedPackageName",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "collapseKey",
            },
          ],
          inputFields: null,
          name: "_googleapi_9_AndroidConfigOut",
        },
        {
          description: "_googleapi_11_AndroidFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_11_AndroidFcmOptionsOut",
        },
        {
          description: "object_52 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_52",
        },
        {
          description: "_googleapi_15_AndroidNotificationOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "notificationCount",
            },
            {
              name: "clickAction",
            },
            {
              name: "vibrateTimings",
            },
            {
              name: "ticker",
            },
            {
              name: "bypassProxyNotification",
            },
            {
              name: "image",
            },
            {
              name: "defaultLightSettings",
            },
            {
              name: "lightSettings",
            },
            {
              name: "tag",
            },
            {
              name: "icon",
            },
            {
              name: "bodyLocKey",
            },
            {
              name: "channelId",
            },
            {
              name: "defaultVibrateTimings",
            },
            {
              name: "titleLocKey",
            },
            {
              name: "proxy",
            },
            {
              name: "bodyLocArgs",
            },
            {
              name: "sound",
            },
            {
              name: "visibility",
            },
            {
              name: "color",
            },
            {
              name: "sticky",
            },
            {
              name: "title",
            },
            {
              name: "notificationPriority",
            },
            {
              name: "body",
            },
            {
              name: "eventTime",
            },
            {
              name: "localOnly",
            },
            {
              name: "defaultSound",
            },
            {
              name: "titleLocArgs",
            },
          ],
          inputFields: null,
          name: "_googleapi_15_AndroidNotificationOut",
        },
        {
          description: "_googleapi_7_LightSettingsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "color",
            },
            {
              name: "lightOnDuration",
            },
            {
              name: "lightOffDuration",
            },
          ],
          inputFields: null,
          name: "_googleapi_7_LightSettingsOut",
        },
        {
          description: "_googleapi_23_ColorOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "red",
            },
            {
              name: "blue",
            },
            {
              name: "green",
            },
            {
              name: "alpha",
            },
          ],
          inputFields: null,
          name: "_googleapi_23_ColorOut",
        },
        {
          description: "_googleapi_25_ApnsConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "payload",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "headers",
            },
          ],
          inputFields: null,
          name: "_googleapi_25_ApnsConfigOut",
        },
        {
          description: "object_288 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_288",
        },
        {
          description: "_googleapi_21_ApnsFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "image",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_21_ApnsFcmOptionsOut",
        },
        {
          description: "object_293 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_293",
        },
        {
          description: "_googleapi_27_WebpushConfigOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "notification",
            },
            {
              name: "headers",
            },
          ],
          inputFields: null,
          name: "_googleapi_27_WebpushConfigOut",
        },
        {
          description: "object_313 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_313",
        },
        {
          description: "object_317 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_317",
        },
        {
          description: "object_321 type",
          fields: [
            {
              name: "_",
            },
          ],
          inputFields: null,
          name: "object_321",
        },
        {
          description: "_googleapi_5_WebpushFcmOptionsOut type",
          fields: [
            {
              name: "error",
            },
            {
              name: "link",
            },
            {
              name: "analyticsLabel",
            },
          ],
          inputFields: null,
          name: "_googleapi_5_WebpushFcmOptionsOut",
        },
        {
          description: "messageManyWhere input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "messageManyWhereInp",
        },
        {
          description: "either type
not_object_373, either_372",
          fields: null,
          inputFields: null,
          name: "either_374In",
        },
        {
          description: "not_object_373 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_373Inp",
        },
        {
          description: "either type
equals_object_359, in_object_360, notIn_object_361, startsWith_object_363, endsWith_object_365, contains_object_367, gt_object_368, lt_object_369, gte_object_370, lte_object_371, integer_339",
          fields: null,
          inputFields: null,
          name: "either_372In",
        },
        {
          description: "equals_object_359 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "equals_object_359Inp",
        },
        {
          description: "union type
base_any_type_union_356, array_357",
          fields: null,
          inputFields: null,
          name: "union_358In",
        },
        {
          description: "union type
integer_352, float_353, boolean_354, string_355",
          fields: null,
          inputFields: null,
          name: "base_any_type_union_356In",
        },
        {
          description: "in_object_360 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "in_object_360Inp",
        },
        {
          description: "notIn_object_361 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "notIn_object_361Inp",
        },
        {
          description: "startsWith_object_363 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
          ],
          name: "startsWith_object_363Inp",
        },
        {
          description: "endsWith_object_365 input type",
          fields: null,
          inputFields: [
            {
              name: "endsWith",
            },
          ],
          name: "endsWith_object_365Inp",
        },
        {
          description: "contains_object_367 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
          ],
          name: "contains_object_367Inp",
        },
        {
          description: "gt_object_368 input type",
          fields: null,
          inputFields: [
            {
              name: "gt",
            },
          ],
          name: "gt_object_368Inp",
        },
        {
          description: "lt_object_369 input type",
          fields: null,
          inputFields: [
            {
              name: "lt",
            },
          ],
          name: "lt_object_369Inp",
        },
        {
          description: "gte_object_370 input type",
          fields: null,
          inputFields: [
            {
              name: "gte",
            },
          ],
          name: "gte_object_370Inp",
        },
        {
          description: "lte_object_371 input type",
          fields: null,
          inputFields: [
            {
              name: "lte",
            },
          ],
          name: "lte_object_371Inp",
        },
        {
          description: "either type
not_object_377, either_376",
          fields: null,
          inputFields: null,
          name: "either_378In",
        },
        {
          description: "not_object_377 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_377Inp",
        },
        {
          description: "either type
equals_object_359, in_object_360, notIn_object_361, startsWith_object_363, endsWith_object_365, contains_object_367, gt_object_368, lt_object_369, gte_object_370, lte_object_371, string_340",
          fields: null,
          inputFields: null,
          name: "either_376In",
        },
        {
          description: "either type
not_object_381, either_380",
          fields: null,
          inputFields: null,
          name: "either_382In",
        },
        {
          description: "not_object_381 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_381Inp",
        },
        {
          description: "either type
equals_object_359, in_object_360, notIn_object_361, startsWith_object_363, endsWith_object_365, contains_object_367, gt_object_368, lt_object_369, gte_object_370, lte_object_371, uid",
          fields: null,
          inputFields: null,
          name: "either_380In",
        },
        {
          description: "inner_where_node_object_390 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "inner_where_node_object_390Inp",
        },
        {
          description: "object_396 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
            {
              name: "user",
            },
          ],
          name: "object_396Inp",
        },
        {
          description: "messageCreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "title",
            },
            {
              name: "user_id",
            },
          ],
          name: "messageCreateInputInp",
        },
        {
          description: "_googleapi_16_MessageIn input type",
          fields: null,
          inputFields: [
            {
              name: "token",
            },
            {
              name: "name",
            },
            {
              name: "condition",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "notification",
            },
            {
              name: "android",
            },
            {
              name: "topic",
            },
            {
              name: "apns",
            },
            {
              name: "webpush",
            },
          ],
          name: "_googleapi_16_MessageInInp",
        },
        {
          description: "object_210 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_210Inp",
        },
        {
          description: "_googleapi_2_FcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
          ],
          name: "_googleapi_2_FcmOptionsInInp",
        },
        {
          description: "_googleapi_12_NotificationIn input type",
          fields: null,
          inputFields: [
            {
              name: "title",
            },
            {
              name: "image",
            },
            {
              name: "body",
            },
          ],
          name: "_googleapi_12_NotificationInInp",
        },
        {
          description: "_googleapi_8_AndroidConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "collapseKey",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "data",
            },
            {
              name: "restrictedPackageName",
            },
            {
              name: "priority",
            },
            {
              name: "ttl",
            },
            {
              name: "notification",
            },
            {
              name: "directBootOk",
            },
          ],
          name: "_googleapi_8_AndroidConfigInInp",
        },
        {
          description: "_googleapi_10_AndroidFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
          ],
          name: "_googleapi_10_AndroidFcmOptionsInInp",
        },
        {
          description: "object_35 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_35Inp",
        },
        {
          description: "_googleapi_14_AndroidNotificationIn input type",
          fields: null,
          inputFields: [
            {
              name: "titleLocArgs",
            },
            {
              name: "defaultSound",
            },
            {
              name: "localOnly",
            },
            {
              name: "eventTime",
            },
            {
              name: "body",
            },
            {
              name: "notificationPriority",
            },
            {
              name: "title",
            },
            {
              name: "sticky",
            },
            {
              name: "color",
            },
            {
              name: "visibility",
            },
            {
              name: "sound",
            },
            {
              name: "bodyLocArgs",
            },
            {
              name: "proxy",
            },
            {
              name: "titleLocKey",
            },
            {
              name: "defaultVibrateTimings",
            },
            {
              name: "channelId",
            },
            {
              name: "bodyLocKey",
            },
            {
              name: "icon",
            },
            {
              name: "tag",
            },
            {
              name: "lightSettings",
            },
            {
              name: "defaultLightSettings",
            },
            {
              name: "image",
            },
            {
              name: "bypassProxyNotification",
            },
            {
              name: "ticker",
            },
            {
              name: "vibrateTimings",
            },
            {
              name: "clickAction",
            },
            {
              name: "notificationCount",
            },
          ],
          name: "_googleapi_14_AndroidNotificationInInp",
        },
        {
          description: "_googleapi_6_LightSettingsIn input type",
          fields: null,
          inputFields: [
            {
              name: "lightOffDuration",
            },
            {
              name: "lightOnDuration",
            },
            {
              name: "color",
            },
          ],
          name: "_googleapi_6_LightSettingsInInp",
        },
        {
          description: "_googleapi_22_ColorIn input type",
          fields: null,
          inputFields: [
            {
              name: "alpha",
            },
            {
              name: "green",
            },
            {
              name: "blue",
            },
            {
              name: "red",
            },
          ],
          name: "_googleapi_22_ColorInInp",
        },
        {
          description: "_googleapi_24_ApnsConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "headers",
            },
            {
              name: "fcmOptions",
            },
            {
              name: "payload",
            },
          ],
          name: "_googleapi_24_ApnsConfigInInp",
        },
        {
          description: "object_278 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_278Inp",
        },
        {
          description: "_googleapi_20_ApnsFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
            {
              name: "image",
            },
          ],
          name: "_googleapi_20_ApnsFcmOptionsInInp",
        },
        {
          description: "object_283 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_283Inp",
        },
        {
          description: "_googleapi_26_WebpushConfigIn input type",
          fields: null,
          inputFields: [
            {
              name: "headers",
            },
            {
              name: "notification",
            },
            {
              name: "data",
            },
            {
              name: "fcmOptions",
            },
          ],
          name: "_googleapi_26_WebpushConfigInInp",
        },
        {
          description: "object_299 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_299Inp",
        },
        {
          description: "object_303 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_303Inp",
        },
        {
          description: "object_307 input type",
          fields: null,
          inputFields: [
            {
              name: "_",
            },
          ],
          name: "object_307Inp",
        },
        {
          description: "_googleapi_4_WebpushFcmOptionsIn input type",
          fields: null,
          inputFields: [
            {
              name: "analyticsLabel",
            },
            {
              name: "link",
            },
          ],
          name: "_googleapi_4_WebpushFcmOptionsInInp",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for index 1`] = `
{
  data: {
    stargazers: [
      {
        login: "cgallay",
        user: {
          name: "Charles Gallay",
        },
      },
      {
        login: "Kazy",
        user: {
          name: "Jocelyn Boullier",
        },
      },
    ],
  },
}
`;

snapshot[`Auto-tests for index 2`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "Validation errors:
  - at <value>.data.email: string does not statisfy the required format 'email'
",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for index 3`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "Authorization failed for policy '__ctx_email__metatype_dev' with effect 'none' on type 'string_4' ('string') at '<root>.list_feedback.email'",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for index 4`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "float type",
          fields: null,
          inputFields: null,
          name: "Float",
        },
        {
          description: "boolean type",
          fields: null,
          inputFields: null,
          name: "Boolean",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "_Float type",
          fields: [
            {
              name: "float",
            },
          ],
          inputFields: null,
          name: "_Float",
        },
        {
          description: "_Boolean type",
          fields: [
            {
              name: "boolean",
            },
          ],
          inputFields: null,
          name: "_Boolean",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "list_feedback",
            },
            {
              name: "stargazers",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "object_14 type",
          fields: [
            {
              name: "user",
            },
            {
              name: "login",
            },
          ],
          inputFields: null,
          name: "object_14",
        },
        {
          description: "object_12 type",
          fields: [
            {
              name: "name",
            },
          ],
          inputFields: null,
          name: "object_12",
        },
        {
          description: "feedbackManyOutput type",
          fields: [
            {
              name: "message",
            },
            {
              name: "email",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "feedbackManyOutput",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "send_feedback",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "feedbackCreateOutput type",
          fields: [
            {
              name: "message",
            },
            {
              name: "email",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "feedbackCreateOutput",
        },
        {
          description: "feedbackManyWhere input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "message",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "feedbackManyWhereInp",
        },
        {
          description: "either type
not_object_49, either_48",
          fields: null,
          inputFields: null,
          name: "either_50In",
        },
        {
          description: "not_object_49 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_49Inp",
        },
        {
          description: "either type
equals_object_35, in_object_36, notIn_object_37, startsWith_object_39, endsWith_object_41, contains_object_43, gt_object_44, lt_object_45, gte_object_46, lte_object_47, string_3",
          fields: null,
          inputFields: null,
          name: "either_48In",
        },
        {
          description: "equals_object_35 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "equals_object_35Inp",
        },
        {
          description: "union type
base_any_type_union_32, array_33",
          fields: null,
          inputFields: null,
          name: "union_34In",
        },
        {
          description: "union type
integer_28, float_29, boolean_30, string_31",
          fields: null,
          inputFields: null,
          name: "base_any_type_union_32In",
        },
        {
          description: "in_object_36 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "in_object_36Inp",
        },
        {
          description: "notIn_object_37 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "notIn_object_37Inp",
        },
        {
          description: "startsWith_object_39 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
          ],
          name: "startsWith_object_39Inp",
        },
        {
          description: "endsWith_object_41 input type",
          fields: null,
          inputFields: [
            {
              name: "endsWith",
            },
          ],
          name: "endsWith_object_41Inp",
        },
        {
          description: "contains_object_43 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
          ],
          name: "contains_object_43Inp",
        },
        {
          description: "gt_object_44 input type",
          fields: null,
          inputFields: [
            {
              name: "gt",
            },
          ],
          name: "gt_object_44Inp",
        },
        {
          description: "lt_object_45 input type",
          fields: null,
          inputFields: [
            {
              name: "lt",
            },
          ],
          name: "lt_object_45Inp",
        },
        {
          description: "gte_object_46 input type",
          fields: null,
          inputFields: [
            {
              name: "gte",
            },
          ],
          name: "gte_object_46Inp",
        },
        {
          description: "lte_object_47 input type",
          fields: null,
          inputFields: [
            {
              name: "lte",
            },
          ],
          name: "lte_object_47Inp",
        },
        {
          description: "either type
not_object_53, either_52",
          fields: null,
          inputFields: null,
          name: "either_54In",
        },
        {
          description: "not_object_53 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_53Inp",
        },
        {
          description: "either type
equals_object_35, in_object_36, notIn_object_37, startsWith_object_39, endsWith_object_41, contains_object_43, gt_object_44, lt_object_45, gte_object_46, lte_object_47, string_4",
          fields: null,
          inputFields: null,
          name: "either_52In",
        },
        {
          description: "either type
not_object_57, either_56",
          fields: null,
          inputFields: null,
          name: "either_58In",
        },
        {
          description: "not_object_57 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "not_object_57Inp",
        },
        {
          description: "either type
equals_object_35, in_object_36, notIn_object_37, startsWith_object_39, endsWith_object_41, contains_object_43, gt_object_44, lt_object_45, gte_object_46, lte_object_47, string_5",
          fields: null,
          inputFields: null,
          name: "either_56In",
        },
        {
          description: "inner_where_node_object_66 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "message",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "inner_where_node_object_66Inp",
        },
        {
          description: "object_72 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "message",
            },
          ],
          name: "object_72Inp",
        },
        {
          description: "feedbackCreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "message",
            },
          ],
          name: "feedbackCreateInputInp",
        },
      ],
    },
  },
}
`;

snapshot[`Auto-tests for prisma 1`] = `
{
  errors: [
    {
      extensions: {},
      locations: [],
      message: "Validation errors:
  - at <value>.data.firstname: expected minimum length: 2, got 0
",
      path: [],
    },
  ],
}
`;

snapshot[`Auto-tests for prisma 2`] = `
{
  data: {
    find_user: [],
    read_user: [],
  },
}
`;

snapshot[`Auto-tests for prisma 3`] = `
{
  data: {
    __schema: {
      types: [
        {
          description: "string type",
          fields: null,
          inputFields: null,
          name: "String",
        },
        {
          description: "integer type",
          fields: null,
          inputFields: null,
          name: "Int",
        },
        {
          description: "_String type",
          fields: [
            {
              name: "string",
            },
          ],
          inputFields: null,
          name: "_String",
        },
        {
          description: "_Integer type",
          fields: [
            {
              name: "integer",
            },
          ],
          inputFields: null,
          name: "_Integer",
        },
        {
          description: "Query type",
          fields: [
            {
              name: "find_user",
            },
            {
              name: "read_user",
            },
          ],
          inputFields: null,
          name: "Query",
        },
        {
          description: "userWithNestedCount type",
          fields: [
            {
              name: "firstname",
            },
            {
              name: "email",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "userWithNestedCount",
        },
        {
          description: "user type",
          fields: [
            {
              name: "firstname",
            },
            {
              name: "email",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "user",
        },
        {
          description: "Mutation type",
          fields: [
            {
              name: "create_user",
            },
          ],
          inputFields: null,
          name: "Mutation",
        },
        {
          description: "_userOutputType type",
          fields: [
            {
              name: "firstname",
            },
            {
              name: "email",
            },
            {
              name: "id",
            },
          ],
          inputFields: null,
          name: "_userOutputType",
        },
        {
          description: "QueryuserWhereInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "firstname",
            },
            {
              name: "AND",
            },
            {
              name: "OR",
            },
            {
              name: "NOT",
            },
          ],
          name: "QueryuserWhereInputInp",
        },
        {
          description: "union type
_string_filter, object_26",
          fields: null,
          inputFields: null,
          name: "union_27In",
        },
        {
          description: "union type
string_13, object_16, object_17, object_18, object_19, object_22, object_23, object_24",
          fields: null,
          inputFields: null,
          name: "_string_filterIn",
        },
        {
          description: "object_16 input type",
          fields: null,
          inputFields: [
            {
              name: "equals",
            },
          ],
          name: "object_16Inp",
        },
        {
          description: "object_17 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "object_17Inp",
        },
        {
          description: "object_18 input type",
          fields: null,
          inputFields: [
            {
              name: "in",
            },
          ],
          name: "object_18Inp",
        },
        {
          description: "object_19 input type",
          fields: null,
          inputFields: [
            {
              name: "notIn",
            },
          ],
          name: "object_19Inp",
        },
        {
          description: "object_22 input type",
          fields: null,
          inputFields: [
            {
              name: "contains",
            },
            {
              name: "mode",
            },
          ],
          name: "object_22Inp",
        },
        {
          description: "object_23 input type",
          fields: null,
          inputFields: [
            {
              name: "search",
            },
          ],
          name: "object_23Inp",
        },
        {
          description: "object_24 input type",
          fields: null,
          inputFields: [
            {
              name: "startsWith",
            },
            {
              name: "endsWith",
            },
          ],
          name: "object_24Inp",
        },
        {
          description: "object_26 input type",
          fields: null,
          inputFields: [
            {
              name: "not",
            },
          ],
          name: "object_26Inp",
        },
        {
          description: "object_44 input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "firstname",
            },
          ],
          name: "object_44Inp",
        },
        {
          description: "union type
object_41, _SortOrder",
          fields: null,
          inputFields: null,
          name: "union_42In",
        },
        {
          description: "object_41 input type",
          fields: null,
          inputFields: [
            {
              name: "sort",
            },
          ],
          name: "object_41Inp",
        },
        {
          description: "_user_CreateInput input type",
          fields: null,
          inputFields: [
            {
              name: "id",
            },
            {
              name: "email",
            },
            {
              name: "firstname",
            },
          ],
          name: "_user_CreateInputInp",
        },
      ],
    },
  },
}
`;
